# django_starter_template

./: .gitignore  main.py  package.json  pyproject.toml  vite.config.ts
config/: jinja2.py  settings.py  urls.py
core/: forms.py
core/jinja2/core/forms/: as_div.html
core/jinja2/core/layouts/: core.html
resources/css/: main.css
resources/js/: app.ts
users/: admin.py  forms.py  models.py  urls.py  views.py
users/jinja2/users/auth/: login.html  register.html
users/jinja2/users/layouts/: guest.html
users/migrations/: 0001_initial.py
