[project]
name = "django-starter-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.3",
    "django-vite>=3.1.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
